CAS output overlap fix for Expand tool
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@53118 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -2552,7 +2552,6 @@ body.application[dir=rtl] .GeoGebraMenuBar table {
 	display: inline;
 	vertical-align:middle;
 	color: gray;
-	float: left;
 	padding-left: 5px;
 	padding-right: 10px;
 }
